:recycle: 코드 리뷰 후 리팩토링.